OGD session_list formatting; strange behavior fix on small screens

--- a/assets/css/styles_ver1.css
+++ b/assets/css/styles_ver1.css
@@ -11073,6 +11073,11 @@ hr {
     margin: 40px 0px 10px 0px; }
   .opengamedata .tab-content p {
     margin-bottom: 10px; }
+  .opengamedata .tab-content .session_list {
+    overflow-y: scroll;
+    max-height: 800px; 
+    padding-left: 0;
+    background: #f5f5f5; }
   .opengamedata .tab-content .playstats {
     display: flex;
     flex-direction: row;
